This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
3/19/24: SEM_4-1-8
3/19/24: Fixed crash opening Acquire at Items from 3/17/24 change.

3/18/24: SEM_4-1-7
3/18/24: In setting up full montage, made it switch the montage to use View or
Search if it is the current area and has a 5x bigger pixel than the other area
(In 4.1).

3/17/24: Fixed Acquire at Items dialog to handle the script selections
correctly when switching between tilt series and other actions or between
Mapping and Final Data (when there are both TS and A items) (In 4.1).

3/17/24: Fixed beam radius in multishot display to be set for the Record probe
mode instead of current one (In 4.1).

3/8/24: Allowed use of LeftOffset, TopOffset, and smaller than full chip size
in CameraSizeX/Y for K2/K3 (In 4.1).

3/5/24: Fixed frame sums before requesting MRC frame from a Falcon 4 so tuning
of camera timing can be checked/iterated without revisiting dialog (In 4.1).

3/1/24: Fixed setting reported values from plugin functions with 1 or 2
returned doubles (In 4.1).

2/29/24: Fixed double counting item skipped in main script as done (In 4.1).

2/28/24: Fixed assignment to variables on ReportNavItem line (In 4.1).

2/28/24: Prevented some unneeded updates when using SuspendNavUpdate and
stopped getting stage position from scope when adding points marked on buffer;
fixed a crash using that with collapsed groups (In 4.1).

2/28/24: Fixed setting variables on command line for ReportCurrentBuffer and
ReportActiveViewTitle (In 4.1).

2/27/24: SEM_4-1-6
2/27/24: Fixed initial angle set from lines in high-focus mag calibration to
omit adjustments for high focus (In 4.1).

2/23/24: Made FEI scope plugin and server adjust the exposure time to get the