@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+3/21/24: Fixed peak erasing not being done when angles from autocorrelation
+analysis were not in the same quadrant (In 4.1).
+
 3/19/24: SEM_4-1-8
 3/19/24: Fixed crash opening Acquire at Items from 3/17/24 change.
 
